--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -23,7 +23,7 @@ jobs:
 
   Build_Push_Image:
     runs-on: ubuntu-latest
-    needs: [quality-check]
+    # needs: [quality-check]
     permissions: write-all
 
     steps:
