--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -41,17 +41,19 @@ jobs:
 
     - name: Download Model
       id: lof_model_name_version
-      run: |
-        if [ -z "$MODEL_VERSION" ]; then
-          MODEL_VERSION=$(az ml model list  -n $MODEL_NAME  -w $ML_WORKSPACE -g $RESOURCE_GROUP -r 1 | jq '.[0].version')
-        fi
+      uses: azure/CLI@v1
+      with:
+        inlineScript: |
+          if [ -z "$MODEL_VERSION" ]; then
+            MODEL_VERSION=$(az ml model list  -n $MODEL_NAME  -w $ML_WORKSPACE -g $RESOURCE_GROUP -r 1 | jq '.[0].version')
+          fi
 
-        az ml model download -n $MODEL_NAME -v $MODEL_VERSION -w $ML_WORKSPACE -g $RESOURCE_GROUP
+          az ml model download -n $MODEL_NAME -v $MODEL_VERSION -w $ML_WORKSPACE -g $RESOURCE_GROUP
 
-        echo $MODEL_NAME
-        echo $MODEL_VERSION
+          echo $MODEL_NAME
+          echo $MODEL_VERSION
 
-        ls -ltr
+          ls -ltr
       env:
         MODEL_NAME: ${{ vars.MODEL_NAME }}
         MODEL_VERSION: ${{ inputs.model_version }}
