--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -43,11 +43,11 @@ jobs:
       run: |
         az extension add -n ml -y
 
-        if [ -z "$MODEL_VERSION" ]; then
-          MODEL_VERSION=$(az ml model list  -n $MODEL_NAME  -w $ML_WORKSPACE -g $RESOURCE_GROUP -r 1 | jq -r '.[0].version') 
-        fi
+        # if [ -z "$MODEL_VERSION" ]; then
+        #   MODEL_VERSION=$(az ml model list  -n $MODEL_NAME  -w $ML_WORKSPACE -g $RESOURCE_GROUP -r 1 | jq -r '.[0].version') 
+        # fi
 
-        az ml model download -n $MODEL_NAME -v $MODEL_VERSION -w $ML_WORKSPACE -g $RESOURCE_GROUP
+        # az ml model download -n $MODEL_NAME -v $MODEL_VERSION -w $ML_WORKSPACE -g $RESOURCE_GROUP
 
         echo $MODEL_NAME
         echo $MODEL_VERSION
