--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -11,6 +11,7 @@ jobs:
   code_quality_checks:
     name: "Code Quality Checks"
     runs-on: ubuntu-latest
+    
     steps:
     - name: Checkout Source
       uses: actions/checkout@v3
@@ -22,16 +23,17 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         python -m pip install flake8        
-        if [ -f controltower/requirements.txt ]; then pip install -r controltower/requirements.txt; fi
+        pip install -U pytest
+        if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
     - name: Install dependencies for testing
       run: |
-        if [ -f tests/test-requirements.txt ]; then pip install -r tests/test-requirements.txt; fi
+        if [ -f requirements-test.txt ]; then pip install -r requirements-test.txt; fi
     - name: Lint with flake8
       run: |
         # stop the build if there are Python syntax errors or undefined names
         flake8 . --count --select=E9,F63,F7,F82 --show-source --statistics
         # exit-zero treats all errors as warnings. The GitHub editor is 127 chars wide
         flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
-    - name: UnitTest with unittest
-      run: |
-        python -m unittest -v
+    # - name: UnitTest with pytest
+    #   run: |
+    #     python -m pytest
