--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -51,7 +51,7 @@ jobs:
         mkdir -p model
         az ml model download -i $MODEL_NAME:$MODEL_VERSION -w $ML_WORKSPACE -g $RESOURCE_GROUP -t model
 
-        ls -ltr model
+        ls -ltr model/overfill_multimodel_
         
         find model -name \*.h5
 
@@ -66,39 +66,12 @@ jobs:
         RESOURCE_GROUP: ${{ vars.RESOURCE_GROUP }}
 
 
-
-    #   # push
-    # - name: Authenticate to AZ, allow ACR public network
-    #   uses: azure/CLI@v1
-    #   with:
-    #     azcliversion: 2.55.0
-    #     inlineScript: |
-    #       az acr login --name ${{ vars.CONTAINER_REG }}.azurecr.io --expose-token
-    #       az acr update --name ${{ vars.CONTAINER_REG }} --public-network-enabled true
-    #       az acr update --name ${{ vars.CONTAINER_REG }} --default-action Allow
-
     - name: Build and push scoring image to ACR
       run: |
         az acr build -t $IMAGE_NAME:$IMAGE_TAG -t $IMAGE_NAME:${{ github.run_id }} -t $IMAGE_NAME:$VERSION --registry ${{ vars.CONTAINER_REG }} -g ${{ vars.RESOURCE_GROUP }} inference/.
       env:
         IMAGE_NAME: ${{ vars.IMAGE_NAME }}
 
-    # - name: Build and push rcloneapp image to ACR
-    #   run: |
-    #     az acr build -t $RCLONE_IMAGE_NAME:$IMAGE_TAG -t $RCLONE_IMAGE_NAME:${{ github.run_id }} -t $RCLONE_IMAGE_NAME:$VERSION --registry ${{ vars.CONTAINER_REG }} -g ${{ vars.RESOURCE_GROUP }} rclone/.
-    #   env:
-    #     RCLONE_IMAGE_NAME: ${{ vars.RCLONE_IMAGE_NAME }}
-
-    # - name: Disable ACR public network
-    #   uses: azure/CLI@v1
-    #   with:
-    #     azcliversion: 2.55.0
-    #     inlineScript: |
-    #       az acr login --name ${{ vars.CONTAINER_REG }}.azurecr.io --expose-token
-    #       az acr update --name ${{ vars.CONTAINER_REG }} --default-action Deny
-    #       az acr update --name ${{ vars.CONTAINER_REG }} --public-network-enabled false
-    # - name: Azure logout
-    #   run: az logout
 
     # - name: Start CD
     #   run: |
