--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -73,10 +73,10 @@ jobs:
         IMAGE_NAME: ${{ vars.IMAGE_NAME }}
 
 
-    # - name: Start CD
-    #   run: |
-    #     gh workflow run deploy.yml -f environment="$START_ENVIRONMENT" -f commit_id="$PROMOTED_COMMIT_ID" -f image_tag="$IMAGE_TAG" -f version="$VERSION"
-    #   env:
-    #     GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-    #     PROMOTED_COMMIT_ID: ${{ github.sha }}
-    #     START_ENVIRONMENT: ${{ vars.START_ENVIRONMENT }}
+    - name: Start CD
+      run: |
+        gh workflow run deploy.yml -f environment="$START_ENVIRONMENT" -f commit_id="$PROMOTED_COMMIT_ID" -f image_tag="$IMAGE_TAG" -f version="$VERSION"
+      env:
+        GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        PROMOTED_COMMIT_ID: ${{ github.sha }}
+        START_ENVIRONMENT: ${{ vars.START_ENVIRONMENT }}
