--- a/workload/workload.yaml
+++ b/workload/workload.yaml
@@ -10,6 +10,7 @@ spec:
       labels:
         purpose: dev-functional-test
         application: dm
+        zone: gray
       environment: dev
       manifests:
         repo: https://github.com/eedorenko/mlops-gitops-gitops
