--- a/workload/workload.yaml
+++ b/workload/workload.yaml
@@ -1,7 +1,7 @@
 apiVersion: scheduler.kalypso.io/v1alpha1
 kind: Workload
 metadata:
-  name: tacosburritosml
+  name: tacos-burritos-ml
   labels:
     type: ml-model
 spec:
